# NotToday

./: .gitignore  .prettierignore  AGENTS.md  ARCHITECTURE.md  README.md  ROADMAP.md  eslint.config.js  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  index.css  useCurrentDate.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AddTaskButton.tsx  SettingsPanel.tsx  TaskItem.tsx  TodayTasks.test.ts  TodayTasks.tsx  WindowHeader.tsx
src/settings/: useAutostart.ts
src/tasks/: task.ts  taskReducer.test.ts  taskReducer.ts  taskReminderService.ts  taskRepository.ts  useTaskManager.ts
